# graph-toy

./: .gitignore  BGL_API.cpp  BGL_API.h  CMakeLists.txt  Doxyfile  Graph.cpp  Graph.h  Graph.hpp  Makefile  Vertex.cpp  Vertex.h  Vertex.hpp  adjacency.json  bgl-toy.cpp  example.cpp  main.cpp
src/: BFSVisitor.hpp  BGL_API.cpp  BGL_API.h  BGL_traits.h  Graph.cpp  Graph.h  Vertex.cpp  Vertex.h  main.cpp
